// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render fontawesome 1`] = `
<i
  aria-hidden="true"
  className="fa fa-bars"
  focusable="false"
  title={null}
/>
`;

exports[`Icon should render from custom font 1`] = `
<i
  aria-hidden="true"
  className="icon-test"
  focusable="false"
  title={null}
/>
`;

exports[`Icon should render from src 1`] = `
<img
  alt=""
  aria-hidden={true}
  className="theme-tc-icon tc-icon"
  src="/foo/bar.png"
/>
`;

exports[`Icon should render from svg 1`] = `
<svg
  aria-hidden="true"
  className="theme-tc-svg-icon tc-svg-icon"
  focusable="false"
  name="svg-dd"
  title={null}
/>
`;

exports[`Icon should render with provided className 1`] = `
<svg
  aria-hidden="true"
  className="theme-tc-svg-icon tc-svg-icon custom-class"
  focusable="false"
  name="svg-dd"
  title={null}
/>
`;

exports[`Icon should support extra props 1`] = `
<svg
  aria-hidden="true"
  className="theme-tc-svg-icon tc-svg-icon custom-class"
  data-custom="hello"
  focusable="false"
  name="svg-dd"
  title={null}
/>
`;

exports[`Icon should support remote svg 1`] = `
<Icon
  name="remote-/assets/icons/my-icon.svg"
/>
`;

exports[`Icon should support remote svg 2`] = `
<svg name="remote-/assets/icons/my-icon.svg"
     class="theme-tc-svg-icon tc-svg-icon"
     focusable="false"
     aria-hidden="true"
>
  <svg>
    <g>
      <path d>
      </path>
    </g>
  </svg>
</svg>
`;
